Stop jumping when output is long/short

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,8 @@ body,
 
     display: flex;
     flex-direction: row;
+
+    flex-shrink: 0;
   }
 
   &__top-section-border {
@@ -160,6 +162,10 @@ body,
 
     display: flex;
     align-items: center;
+
+    flex-shrink: 0;
+
+    box-sizing: border-box;
 
     border-bottom: solid 1px #aaa;
   }
